chore(deps): upgrade deps

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,11 +24,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 21
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@0bfe00a136db5e61ba3416b372542a65863a9fee
+      uses: gradle/gradle-build-action@2
       with:
         arguments: build
